feate: update home page, header, footer . add product page and cart

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --accent-background: #f9f9f9;
+  --accent-color: "#B57EDC"
+}
+
+.open-sans {
+  font-family: var('--font-open-sans');
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,13 +20,8 @@
   }
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
-
