--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,42 @@
     text-wrap: balance;
   }
 }
+
+.truncate-2-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  /* Limit to 2 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5em;
+  /* Adjust line height as needed */
+  max-height: 3em;
+  /* 2 lines * line-height */
+}
+
+.truncate-3-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  /* Limit to 5 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5em;
+  /* Adjust line height as needed */
+  min-height: 4.5em;
+  /* 2 lines * line-height */
+}
+
+.truncate-5-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  /* Limit to 5 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5em;
+  /* Adjust line height as needed */
+  min-height: 4.5em;
+  /* 2 lines * line-height */
+}
