--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --accent-background: #f9f9f9;
-  --accent-color: "#B57EDC";
+  --accent-color: #722F37;
   --primary-color: #4682B4
 }
 
